robballen75-Salesforce/4-7-15/src/objects/Contract_Site__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sites Covered by Contract</relationshipLabel>
        <relationshipName>R00N50000001u9RbEAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_ProductSite_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ProductSite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_SiteID__c</fullName>
        <label>Legacy SiteID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>SF Migration Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Contracts for Site</relationshipLabel>
        <relationshipName>R00N50000001u9S0EAI</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Site</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Contract Site #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>